--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -25,8 +25,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install  flake8 matplotlib pytest requests
-          pip install haversine 
+          python -m pip install  flake8 matplotlib pytest requests
+          python -m pip install haversine 
+          python -m pip install black
 
       # - name: Lint with flake8
       #   run: flake8 --statistics *.py
@@ -38,6 +39,8 @@ jobs:
         run: |
           python Task1A.py
           python Task1B.py
+          python Task1C.py
+          python Task1D.py
 
       - name: Run Deliverable 2 code
         run: |
