--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -28,6 +28,8 @@ jobs:
           python -m pip install  flake8 matplotlib pytest requests
           python -m pip install haversine 
           python -m pip install black
+          python -m pip install sqlalchemy
+    
 
       # - name: Lint with flake8
       #   run: flake8 --statistics *.py
